infra-k8s/my-service-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  fido-my-service-deployment
  namespace: default
  labels:
    app: my-service
spec:
  selector:
    matchLabels:
      app: my-service
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-service
    spec:
      containers:
      - name: my-service-container
        image: my-registry.local:5000/my-service:latest
        ports:
          - containerPort: 9000
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 10
      restartPolicy: Always
