infra-k8s/my-service-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-my-service
spec:
  selector:
    app: my-service
  ports:
    - port: 80
      targetPort: 9000
